Fix: CTA position on mobile and tablet

--- a/netlify/functions/preview/src/sass/utilities/_button.scss
+++ b/netlify/functions/preview/src/sass/utilities/_button.scss
@@ -20,6 +20,7 @@
     position: relative;
 
     &.slim {
+        height: 35px;
         padding: 3px 1.7em;
     }
 
